--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="data\main.css">
     <link rel="stylesheet" href="data\navigation.css">
     <link rel="stylesheet" href="data\section-styles\previev.css">
-    <title>Document</title>
+    <title>About me</title>
 </head>
 <body>
     <section class="preview">
@@ -14,9 +14,8 @@
             <nav class="nav">
                 <h3>Briefly about me</h3>
                 <div class="nav-links">
-                    <a href=""><button class="nav-link">Order a service</button></a>
-                    <a href=""><button class="nav-link">Projects</button></a>
-                    <a href=""><button class="nav-link">Main page</button></a>
+                    <a href="services.html"><button class="simple-button">Order a service</button></a>
+                    <a href="progects.html"><button class="simple-button">Projects</button></a>                
                 </div>
             </nav>
             <div class="preview-content">
@@ -32,18 +31,18 @@
     </section>
     <section class="main-content">
         <div class="container grid-container">
-            <div class="main-content_area two-column-fraction">
-                <p class="main-content_area-paragrapf preview-content_info-paragrapf">At the moment, my biggest project is a school Wi-Fi station, which was presented to the republic. The project includes the following parts: a physical part with boards and a server part with a telegram bot on aiogram and a website with a backend on Django. More information about the project can be found on other pages.</p>
+            <div class="content_area two-column-fraction">
+                <p class="main-content_area-paragrapf simple-paragraph">At the moment, my biggest project is a school Wi-Fi station, which was presented to the republic. The project includes the following parts: a physical part with boards and a server part with a telegram bot on aiogram and a website with a backend on Django. More information about the project can be found on other pages.</p>
                 <div class="main-content_area-imgs">
                     <img class="main-content_area-img" src="data\img\django.png" alt="">
                     <img class="main-content_area-img" src="data\img\telebot.png" alt="">
                 </div>
             </div>
-            <div class="main-content_area one-column-fraction">
-                <p class="main-content_area-paragrapf preview-content_info-paragrapf">To order a project, go to the "order service" tab and fill in the appropriate fields.</p>
+            <div class="content_area one-column-fraction">
+                <p class="main-content_area-paragrapf simple-paragraph">To order a project, go to the "order service" tab and fill in the appropriate fields.</p>
             </div>
-            <div class=" main-content_area one-column-fraction">
-                <p class="main-content_area-paragrapf preview-content_info-paragrapf">from python, I know OOP Sqlite, PostgreSQL, Django, and a number of libraries. from website layout, I own Bootstrap Tailwind and of course HTML CSS and SCSS</p>
+            <div class=" content_area one-column-fraction">
+                <p class="main-content_area-paragrapf simple-paragraph">from python, I know OOP Sqlite, PostgreSQL, Django, and a number of libraries. from website layout, I own Bootstrap Tailwind and of course HTML CSS and SCSS</p>
             </div>
         </div>
     </section>
@@ -52,8 +51,8 @@
             <h4 class="footer-content__title">Информация о проекте и разработчике: </h4>
             <div class="footer-content__data">
                 <img class="footer-content__data-img" src="data\img\git-logo.png" alt="ERROR">
-                <a href="https://github.com/zeniafiat"><button class="nav-link">Наш github</button></a>
-                <a href="eugeniydevtalent@gmail.com"><button class="nav-link">Написать по вопросам</button></a>
+                <a href="https://github.com/zeniafiat"><button class="simple-button">Наш github</button></a>
+                <a href="eugeniydevtalent@gmail.com"><button class="simple-button">Написать по вопросам</button></a>
             </div>
         </div>
     </footer>
