--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="preview">
         <div class="container">
             <nav class="nav">
-                <h3>Briefly about me</h3>
+                <a class="index-link"  href="index.html"><h3>Briefly about me</h3></a>
                 <div class="nav-links">
                     <a href="services.html"><button class="simple-button">Order a service</button></a>
                     <a href="progects.html"><button class="simple-button">Projects</button></a>                
@@ -22,7 +22,7 @@
                 <img style="object-fit: cover;" src="data\img\I.jpg" alt="">
                 <div class="preview-content_info">
                     <h2 class="preview-content_info-header">Eugeniy Filatov <span class="text-small">(Developer, electrical engineer)</span></h2>
-                    <p class="preview-content_info-local"><span class="text-bold">Born:</span> November 16, 2008 (age: 16)</p>
+                    <p class="preview-content_info-local"><span class="text-bold">Born:</span> 2008 (age: 16)</p>
                     <p class="preview-content_info-local"><span class="text-bold">Nationality:</span> Belarus</p>
                     <p class="preview-content_info-paragrapf">I am a full-stack developer, I own Python at the junior level and I design websites. I also know how to make projects with Arduino and esp.</p>
                 </div>
@@ -34,8 +34,7 @@
             <div class="content_area two-column-fraction">
                 <p class="main-content_area-paragrapf simple-paragraph">At the moment, my biggest project is a school Wi-Fi station, which was presented to the republic. The project includes the following parts: a physical part with boards and a server part with a telegram bot on aiogram and a website with a backend on Django. More information about the project can be found on other pages.</p>
                 <div class="main-content_area-imgs">
-                    <img class="main-content_area-img" src="data\img\django.png" alt="">
-                    <img class="main-content_area-img" src="data\img\telebot.png" alt="">
+                    <img class="main-content_area-img" src="data\img\image.png" alt="">
                 </div>
             </div>
             <div class="content_area one-column-fraction">
