--- a/progects.html
+++ b/progects.html
@@ -12,7 +12,7 @@
     <section class="projects">
         <div class="container">
             <nav class="nav">
-                <h3>Briefly about me</h3>
+                <a class="index-link" href="index.html"><h3>Briefly about me</h3></a>
                 <div class="nav-links">
                     <a href="services.html"><button class="simple-button">Order a service</button></a>
                     <a href="index.html"><button class="simple-button">Main page</button></a>
@@ -22,7 +22,8 @@
                 <div class="project-card content_area">
                     <img class="project-card_img simple-img" src="data\img\dat.png" alt="">
                     <div class="project-card_info">
-                        <h4 class="project-card_info-title header-4">school Wi-Fi station</h4>
+                        <h4 class="project-card_info-title header-4">School Wi-Fi station</h4>
+                        <div class="simple-line"></div>
                         <p class="project-card_info-description simple-paragraph">Проект «Wifi-School-Station» представляет собой систему мониторинга окружающей среды и обеспечения безопасности помещений, для школы, которая собирает данные с датчиков и передает их на сервер для дальнейшей обработки и хранения. Пользователь может запросить актуальные данные или историю показателей через Telegram-бота и сайт. Проект разработан на базе микроконтроллера LOLIN(WEMOS) D1 с использованием OLED-дисплея, датчиков MQ-5, DHT-22, HC-SR505 и RFID-RC522. Программная часть включает в себя код для микроконтроллера, написанный на C++ в Arduino IDE, и серверную часть, реализованную с использованием Python, SQLite и библиотеки aiogram для Telegram-бота, фреймворком Django.</p>
                     </div>
                     <a class='project-card_see-more' href="https://github.com/zeniafiat/Wifi-School-Station">
