--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
     <section class="order">
         <div class="container">
             <nav class="nav">
-                <h3>Briefly about me</h3>
+                <a class="index-link"  href="index.html"><h3>Briefly about me</h3></a>
                 <div class="nav-links">
                     <a href="index.html"><button class="simple-button">Main page</button></a>
                     <a href="progects.html"><button class="simple-button">Projects</button></a>
@@ -21,10 +21,10 @@
             <div class="order-box">
                 <form class="order-form" action="">
                     <label for="name">How to contact you?</label>
-                    <input class="simple-form-text" type="text" name="name" id="name">
-                    <label for="description">Short description what would you like to order</label>
-                    <textarea class="simple-form-text-area"  name="description" id="description"></textarea>
-                    <h4 class="header-4">I will contact you after submitting the order form.</h4>
+                    <input placeholder="Input here..."  class="simple-form-text" type="text" name="name" id="name">
+                    <label for="description">Short description what would you like to order: </label>
+                    <textarea placeholder="Input here..." class="simple-form-text-area"  name="description" id="description"></textarea>
+                    <h4 class="header-4">I will contact you after submitting the order form. But now better you contact mi :)</h4>
                     <input class="simple-button" type="submit" value="Submit">
                 </form>
             </div>
