--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="main-content">
         <div class="container grid-container">
             <div class="content_area two-column-fraction">
-                <p class="main-content_area-paragrapf simple-paragraph">At the moment, my biggest project is a school Wi-Fi station, which was presented to the republic. The project includes the following parts: a physical part with boards and a server part with a telegram bot on aiogram and a website with a backend on Django. More information about the project can be found on other pages.</p>
+                <p class="main-content_area-paragrapf simple-paragraph">At the moment, my biggest project is a School Wi-Fi station, which was presented to the republic. The project includes the following parts: a physical part with boards and a server part with a telegram bot on aiogram and a website with a backend on Django. More information about the project can be found on other pages.</p>
                 <div class="main-content_area-imgs">
                     <img class="main-content_area-img" src="data\img\image.png" alt="">
                 </div>
