--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="footer-content__data">
                 <img class="footer-content__data-img" src="data\img\git-logo.png" alt="ERROR">
                 <a href="https://github.com/zeniafiat"><button class="simple-button">Наш github</button></a>
-                <a href="eugeniydevtalent@gmail.com"><button class="simple-button">Написать по вопросам</button></a>
+                <a href="mailto:eugeniydevtalent@gmail.com"><button class="simple-button">Написать по вопросам</button></a>
             </div>
         </div>
     </footer>
